--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "mongoose": "^7.0.1",
@@ -19,6 +20,5 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
-    }
-
+  }
 }
