--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,14 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
+    "react-todo-app": "file:..",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
