--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "npm start --prefix client"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +14,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.16.4",
     "mongoose": "^7.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-todo-app": "file:.."
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
