--- a/package.json
+++ b/package.json
@@ -3,17 +3,35 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "install:client": "npm install --prefix client",
-    "build:client": "npm run build --prefix client",
-    "serve:client": "serve -s -n ./client/build -l 80",
-    "install:server": "npm install --prefix server",
-    "serve:server": "npm run start --prefix server",
-    "install:all": "npm-run-all --sequential install:client install:server",
-    "serve:all": "npm-run-all --parallel serve:client serve:server"
+    "start:client": "react-scripts start",
+    "start:server": "nodemon ./server/index.js",
+    "start": "npm-run-all --parallel start:client start:server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npm-run-all": "^4.1.5"
-  }
+    "npm-run-all": "^4.1.5",
+    "axios": "^1.3.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "react-todo-app": "file:..",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.0",
+    "styled-components": "^4.1.3",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.16.4",
+    "mongoose": "^7.0.1",
+    "path": "^0.12.7",
+    "nodemon": "^2.0.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
