--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start:client": "react-scripts start",
     "start:server": "nodemon ./server/index.js",
-    "start": "npm-run-all --parallel start:client start:server"
+    "start": "npm-run-all start:server"
   },
   "author": "",
   "license": "ISC",
