--- a/package.json
+++ b/package.json
@@ -3,23 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start:client": "react-scripts start",
-    "start:server": "nodemon ./server/index.js",
-    "start": "npm-run-all start:server"
+    "start": "nodemon ./server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npm-run-all": "^4.1.5",
-    "axios": "^1.3.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-scripts": "2.1.3",
-    "react-todo-app": "file:..",
-    "redux": "^4.0.1",
-    "redux-saga": "^1.0.0",
-    "styled-components": "^4.1.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -27,11 +15,5 @@
     "mongoose": "^7.0.1",
     "path": "^0.12.7",
     "nodemon": "^2.0.0"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
