--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 PORT=80
-BE_PORT_LOL=80
-MYSQLDB=""
+BE_PORT=80
+MYSQL_HOST=""
+MYSQL_USER=""
+MYSQL_PASSWORD=""
+MYSQL_DB_NAME=""
 REACT_APP_BACKEND_URL="http://localhost:5050"
 FRONTEND_URL="*"
 #REACT_APP_BACKEND_URL="http://20.203.252.113:5050"
