--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.16.4",
-    "mongoose": "^7.0.1",
-    "path": "^0.12.7",
-    "nodemon": "^2.0.0"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.0",
+    "path": "^0.12.7"
   }
 }
