Fixes fallbacks authentication

--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-PORT=80
 BE_PORT=80
-MYSQL_HOST=""
-MYSQL_USER=""
-MYSQL_PASSWORD=""
-MYSQL_DB_NAME=""
-REACT_APP_BACKEND_URL="http://localhost:5050"
 FRONTEND_URL="*"
-#REACT_APP_BACKEND_URL="http://20.203.252.113:5050"
+
+MYSQL_HOST="482447db.mysql.database.azure.com"
+MYSQL_USER="useruser"
+MYSQL_PASSWORD="123Asd456"
+MYSQL_DB_NAME="ukol2"
