--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 BE_PORT=80
 FRONTEND_URL="*"
 
-MYSQL_HOST="482447db.mysql.database.azure.com"
+MYSQL_HOST="ukol2db.mysql.database.azure.com"
 MYSQL_USER="useruser"
 MYSQL_PASSWORD="123Asd456"
 MYSQL_DB_NAME="ukol2"
