Cleanup and repeater

--- a/.env
+++ b/.env
@@ -1,6 +1,2 @@
 PORT=80
-BE_PORT_LOL=5050
-MYSQLDB=""
-REACT_APP_BACKEND_URL="http://localhost:5050"
-FRONTEND_URL="*"
-#REACT_APP_BACKEND_URL="http://20.203.252.113:5050"
+REACT_APP_BACKEND_URL="https://x482447be2.azurewebsites.net/"
