--- a/package.json
+++ b/package.json
@@ -3,30 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start:client": "react-scripts start",
-    "start:server": "nodemon ./server/index.js",
-    "start": "npm-run-all --parallel start:client start:server"
+    "start": "react-scripts start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npm-run-all": "^4.1.5",
     "axios": "^1.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
-    "react-todo-app": "file:..",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0",
-    "styled-components": "^4.1.3",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.16.4",
-    "mongoose": "^7.0.1",
-    "path": "^0.12.7",
-    "nodemon": "^2.0.0"
+    "styled-components": "^4.1.3"
   },
   "browserslist": [
     ">0.2%",
