--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=80
-REACT_APP_BACKEND_URL="https://x482447be2.azurewebsites.net/"
+REACT_APP_BACKEND_URL="https://x482447be2.azurewebsites.net"
