--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "react-todo-app",
   "version": "1.0.0",
   "description": "",
+  "main": "index.js",
   "scripts": {
-    "install:client": "npm install --prefix client",
-    "build:client": "npm run build --prefix client",
-    "serve:client": "serve -s -n ./client/build -l 80",
-    "install:server": "npm install --prefix server",
-    "serve:server": "npm run start --prefix server",
-    "install:all": "npm-run-all --sequential install:client install:server",
-    "serve:all": "npm-run-all --parallel serve:client serve:server"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "npm-run-all": "^4.1.5"
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.16.4",
+    "mongoose": "^7.0.1",
+    "path": "^0.12.7",
+    "react-todo-app": "file:.."
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.0"
   }
 }
